# pymatgen-io-openmm

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  __init__.py  alchemy_utils.py  environment.yaml  generators.py  inputs.py  polymer_networking.py  pyproject.toml  requirements-ci.txt  requirements.txt  sets.py  setup.py  simulation.py  simulations.py  utils.py
.github/workflows/: CI.yaml  linting.yml  testing.yml
docker/: Dockerfile  README.md  environment.yml  perlmutter_runner.sh  production.py  requirements.txt  test.py
docker/openmm_files/: run_simulation.py  state.xml
pymatgen/io/openmm/: __init__.py  alchemy_utils.py  boneyard.py  generators.py  inputs.py  parameterizer.py  schema.py  sets.py  simulations.py  utils.py
pymatgen/io/openmm/exception_messages/: parameterizer_messages.py
pymatgen/io/openmm/tests/: conftest.py  datafiles.py  pytest_pymatgen_io_openmm_output.txt  pytest_pymatgen_io_openmm_output_amber_install.txt  test_alchemy_utils.py  test_boneyard.py  test_generators.py  test_inputs.py  test_parameterizer.py  test_sets.py  test_simulations.py  test_utils.py
pymatgen/io/openmm/tests/test_files/geometries/: trimer.txt
pymatgen/io/openmm/tests/test_files/input_sets/alchemy_input_set/: reaction_spec.json  reactive_system.json  state.xml  system.xml
pymatgen/io/openmm/tests/test_files/input_sets/default_input_set/: contents.json  corrupted_state.xml  state.xml  system.xml
test_env/: test_env.yaml
tests/: datafiles.py  test  test.sdf  test2  test3  test5  test6  test_generators.py  test_inputs.py  test_sets.py  test_setup.py  test_simulations.py  test_utils.py
tests/test_files/: water_ethanol_coordinates.npy
tests/test_files/input_sets/alchemy_input_set/: state.xml
tests/test_files/partial_charge/: FEC.npy  PF6.xyz
tutorials/: basic_setup_tutorial.ipynb  polymer_networking_tutorial.ipynb  using_parameterizers.ipynb
